--- a/src/kd-accordion/styles/editor.scss
+++ b/src/kd-accordion/styles/editor.scss
@@ -2,10 +2,10 @@
  * Editor styles for the admin
  */
 
-.ab-block-accordion {
-    margin-bottom: 0;
+.kd-block-accordion {
+	margin-bottom: 0;
 }
 
-.editor-block-list__layout [data-type="atomic-blocks/ab-accordion"] {
-    margin-bottom: 1.2em;
+.editor-block-list__layout [data-type='atomic-blocks/ab-accordion'] {
+	margin-bottom: 1.2em;
 }
