Working almost perfect

--- a/src/kd-two-columns/styles/style.scss
+++ b/src/kd-two-columns/styles/style.scss
@@ -8,6 +8,13 @@
 	position: relative;
 	padding: 0;
 
+	// Every element inside the columns, except the IMG, has to be complete opaque;
+	.wp-block-kd-blocks-kd-column.kd-col {
+		& > *:not(.kd-container-image-wrap img.kd-container-image) {
+			filter: brightness(100%);
+		}
+	}
+
 	&.alignfull {
 		.editor-block-list__block {
 			max-width: 100%;
