--- a/src/kd-container/styles/editor.scss
+++ b/src/kd-container/styles/editor.scss
@@ -1,3 +1,10 @@
 /**
  * Editor styles for the admin
  */
+
+/* Workaround to set 'Add Block Button' Visible inside the columns */
+.kd-block-two-col
+	.editor-block-list__layout
+	.wp-block.editor-block-list__block {
+	padding-top: 1px;
+}
