--- a/src/kd-container-bg/styles/style.scss
+++ b/src/kd-container-bg/styles/style.scss
@@ -3,12 +3,15 @@
  * Loads on front end and back end
  */
 
-.kd-block-container {
+.kd-block-container-bg {
 	margin: 0;
 	position: relative;
 	padding: 0;
+	background-size: cover;
 
 	.kd-container-inside {
+		position: relative;
+
 		& > *:not(.kd-container-image-wrap img.kd-container-image) {
 			filter: brightness(100%);
 		}
@@ -45,63 +48,8 @@
 		z-index: 0;
 	}
 
-	.kd-container-image {
-		object-fit: cover;
-		height: 100%;
-		width: 100%;
-		transition: 0.3s ease;
-	}
-
 	.kd-container-content {
 		margin: 0 auto;
 		position: relative;
-	}
-
-	.kd-container-image:not(.has-background-dim) {
-		opacity: 0;
-	}
-
-	.has-background-dim {
-		opacity: 0.5;
-	}
-
-	.has-background-dim-10 {
-		opacity: 0.1;
-	}
-
-	.has-background-dim-20 {
-		opacity: 0.2;
-	}
-
-	.has-background-dim-30 {
-		opacity: 0.3;
-	}
-
-	.has-background-dim-40 {
-		opacity: 0.4;
-	}
-
-	.has-background-dim-50 {
-		opacity: 0.5;
-	}
-
-	.has-background-dim-60 {
-		opacity: 0.6;
-	}
-
-	.has-background-dim-70 {
-		opacity: 0.7;
-	}
-
-	.has-background-dim-80 {
-		opacity: 0.8;
-	}
-
-	.has-background-dim-90 {
-		opacity: 0.9;
-	}
-
-	.has-background-dim-100 {
-		opacity: 1;
 	}
 }
